<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.addrinks.addrinks.AccountFragment">

    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/colorPrimary"
        android:showDividers="end">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mustermann"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_prename"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Max"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="f.waidner@gmx.de"
            android:enabled="true"
            android:drawableBottom="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plzOrt"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="66111"
            android:enabled="true"
            android:drawableBottom="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saarbrücken"
                android:enabled="true"
                android:drawableBottom="@color/colorPrimaryDark"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordRepeat"/>
            </TableRow>

            <TableRow>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="deineMudda"
                    android:enabled="true"
                    android:drawableBottom="@color/colorPrimaryDark"/>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="deineMudda"
                    android:enabled="true"
                    android:drawableBottom="@color/colorPrimaryDark"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/changePersonalData"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submitData"
            android:onClick="submitData"
            android:textSize="12sp" />
    </LinearLayout>
</FrameLayout>
</ScrollView>
