<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.addrinks.addrinks.CommercialFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@id/commercial_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commercial_headline"
        android:textSize="@dimen/home_headline_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@id/commercial_horizontal_break"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignBaseline="@id/commercial_headline"
        android:background="@color/colorPrimary" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_technique"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:id="@+id/switch1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_cars"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_cars"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_beauty"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_children"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commercial_consumption"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:textSize="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commercial_animals"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="3dp"
            android:textSize="20dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>

        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Technik"
            android:textSize="30dp"
            android:textStyle="italic"
            android:background="@drawable/tools"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Auto"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/truck"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Beauty"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/gift"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ball"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/briefcase"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/monitor"/>
    </LinearLayout>
</LinearLayout>
