<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.addrinks.addrinks.CoffeeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@id/coffee_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coffee_headline"
        android:textSize="@dimen/home_headline_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@id/coffee_horizontal_break"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignBaseline="@id/coffee_headline"
        android:background="@color/colorPrimary" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/coffee_horizontal_break"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <RadioButton android:id="@id/radio_capsules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_capsules"
            android:textSize="25dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@id/radio_pads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_pads"
            android:textSize="25dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@id/radio_beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_beans"
            android:textSize="25dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@id/radio_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_filter"
            android:textSize="25dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <View
        android:id="@id/coffee_horizontal_break_lower"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignBaseline="@id/coffee_headline"
        android:background="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/radio_group_caps"
        android:layout_alignBaseline="@id/coffee_horizontal_break_lower"
        android:paddingTop="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/nespresso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nespresso" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/cafissimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cafissimo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/expressi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/expressi" />
        </LinearLayout>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_pads"
        android:layout_alignBaseline="@id/coffee_horizontal_break_lower"
        android:paddingTop="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tassimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tassimo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/dolcegusto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dolcegusto" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/senseo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/senseo" />
        </LinearLayout>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_beans"
        android:layout_alignBaseline="@id/coffee_horizontal_break_lower"
        android:paddingTop="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/dallmayr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dallmayr" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tchibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tchibo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/lavazza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lavazza" />
        </LinearLayout>
    </RadioGroup>
</LinearLayout>
</ScrollView>